[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://Scripts/Part2/WorldMap.gd" id="1_map"]
[ext_resource type="Texture2D" path="res://Assets/Part2/BG_Void_Dimension.png" id="2_bg"]

[node name="WorldMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_map")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.15, 0.6)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -331.0
offset_top = 40.0
offset_right = 331.0
offset_bottom = 123.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.4, 1, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_font_sizes/font_size = 60
text = "TERRA NOVA MAP"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -150.0
offset_right = 500.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="ChapterList" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40
alignment = 1

[node name="PathLine" type="Line2D" parent="ScrollContainer/ChapterList"]
z_index = -1
width = 6.0
default_color = Color(0.4, 1, 0.8, 0.4)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="BottomControls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1

[node name="SkillTreeBtn" type="Button" parent="BottomControls"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "ผังทักษะ"

[node name="SaveBtn" type="Button" parent="BottomControls"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "บันทึก/โหลด"

[node name="BackBtn" type="Button" parent="BottomControls"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
text = "กลับหน้าหลัก"

[connection signal="pressed" from="BottomControls/SkillTreeBtn" to="." method="_on_skill_tree_pressed"]
[connection signal="pressed" from="BottomControls/SaveBtn" to="." method="_on_save_pressed"]
[connection signal="pressed" from="BottomControls/BackBtn" to="." method="_on_back_pressed"]
